# mx-ui

./: .gitignore  CMakeLists.txt
data/: main.ui  mx-ui.gresource.xml  style.css
src/: Frame.cpp  Frame.h  main.cpp  main.ui  protocol.cpp  protocol.h  style.css
